# aiogram_windows

./: LICENSE  README.md  pyproject.toml
aiogram_windows/: LICENSE  __init__.py  bot_temp.py  pyproject.toml
aiogram_windows/models/: message.py  telegram_window.py  text.py
aiogram_windows/src/aiogram_windows/: __init__.py  errors.py  main_window.py  utils.py
core/: buider.py  cache.py  helpers.py  metacore.py  methods.py
core/methods/: message.py
core/models/: files.py  keyboard_builder.py  message.py  text.py
simple_aiogram/: bot_temp.py
simple_aiogram/models/: keyboard_builder.py  telegram_window.py
src/simple_aiogram/: cache.py
src/simple_aiogram/models/: files.py  keyboard_builder.py  telegram_window.py
