[project]
name = "aiogram-windows"
version = "0.1.0"
description = "Simple telegram windows"
authors = [
    {name = "belyankiss",email = "belyankiss@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiogram (>=3.20.0.post0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
