[project]
name = "aiogram-windows"
version = "0.1.0"
description = ""
authors = [
    {name = "compocarno",email = "belyankiss@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram (>=3.20.0.post0,<4.0.0)"
]

[tool.poetry]
packages = [{include = "aiogram_windows", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
